# Group-4---Software-S-R---26W---Sec2

./: .gitignore  CMakeLists.txt  Final Project Documentation.docx  Project_Test_Log_Template.xlsx  README.md  README.txt
documentation/PVS-Studio Scan Results/: script.js
documentation/PVS-Studio Scan Results/sources/: client_logic.cpp_0.html  server_logic.cpp_3.html  server_main.cpp_4.html
fullhtml/: index.html
fullhtml/sources/: client_main.cpp_1.html  common.cpp_2.html
include/: client_logic.hpp  common.hpp  server_logic.hpp
src/: client_logic.cpp  client_main.cpp  common.cpp  server_logic.cpp  server_main.cpp
tests/AGC.Client.UnitTests/: AGC.Client.UnitTests.cpp
tests/AGC.Common.UnitTests/: AGC.Common.UnitTests.cpp
tests/AGC.IntegrationSystemTests/: AGC.IntegrationSystemTests.cpp
tests/AGC.Server.UnitTests/: AGC.Server.UnitTests.cpp
